tests/positive/basic/array_get_bool/input.ci
void main() {
    bool[] xs = [true, false];
    print(toString(arrayGet(xs, 1)) + "\n");
}
