tests/negative/semantic/array_get_index_bool/input.ci
void main() {
    int[] xs = [1];
    print(toString(arrayGet(xs, true)) + "\n");
}
